# tenex

./: .gitignore  .npmignore  .repomixignore  AGENTS.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_CODE_REFERENCE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_DOCS_INDEX.md  BRAINSTORM.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  CONSOLIDATION_COMPLETE.md  CONVERSATION_TRACING.md  Cargo.toml  DEAD_CODE_ANALYSIS.md  E2E_CLEANUP_SUMMARY.md  E2E_FRAMEWORK.md  E2E_TESTING_ARCHITECTURE.md  E2E_TESTING_STATUS.md  FLOW-ANALYSIS-REPORT.md  FRAGMENT_BASED_PROPOSALS.md  FRAGMENT_CONSOLIDATION_PLAN.md  FRAGMENT_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  LONG.md  MIGRATION_PENDING.md  MODULE_INVENTORY.md  NDK-TEST-REFACTORING.md  NEW-FLOW.md  OTEL_PHASE2_COMPLETE.md  OTEL_PHASE3_COMPLETE.md  OTEL_PHASE4_COMPLETE.md  OTEL_SETUP.md  PLAN.md  PM-ROUTING-IMPLEMENTATION.md  PREFIX_MIGRATION_PLAN.md  PROCESS_MANAGER_IMPLEMENTATION.md  (+65 more)
crates/tenex-accounting/: Cargo.toml
crates/tenex-accounting/src/: agent_labels.rs  ids.rs  lib.rs  query.rs  recorder.rs  simple.rs
crates/tenex-accounting/tests/: query_agent.rs  schema.rs
crates/tenex-agent/: AGENTS.md  Cargo.toml
crates/tenex-agent-registry/: AGENTS.md  Cargo.toml
crates/tenex-agent-registry/src/: atomic.rs  categorize.rs  category.rs  doc.rs  index.rs  lib.rs  projection.rs  sanitize.rs
crates/tenex-agent-storage/: AGENTS.md  Cargo.toml
crates/tenex-agent-storage/src/: category.rs  keys.rs  lib.rs  paths.rs  serde_util.rs
crates/tenex-agent/src/: accounting.rs  acp_config.rs  acp_main.rs  acp_mcp.rs  acp_mcp_server.rs  acp_process.rs  acp_runtime_accounting.rs  agent_loop_hook.rs  cassette.rs  cassette_client.rs  cassette_request.rs  categorize.rs  compaction.rs  config.rs  context_discovery.rs  context_rig.rs  emit.rs  escalation.rs  file_modifications.rs  home.rs  hook.rs  identity_resolver.rs  injections.rs  lib.rs  llm_accounting.rs  llm_retry.rs  main.rs  main_macro.rs  mcp_stdio.rs  mock_llm.rs  multimodal.rs  nostr.rs  oauth_client.rs  progress_monitor.rs  project_hooks.rs  project_instructions.rs  prompt.rs  provider_request_sanitizer.rs  runtime_control.rs  runtime_state.rs  (+7 more)
crates/tenex-backend-keys/: Cargo.toml
crates/tenex-backend-keys/src/: lib.rs
crates/tenex-context/: AGENTS.md  Cargo.toml
crates/tenex-context/src/: lib.rs  projection.rs  tokens.rs  transcript.rs  turn.rs  types.rs
crates/tenex-context/tests/: print_delegation_projection.rs  projection.rs  projection_active_tools.rs  projection_multi_delegation.rs  projection_single_source.rs
crates/tenex-conversations/: AGENTS.md  Cargo.toml
crates/tenex-conversations/src/: discovery.rs  error.rs  ids.rs  lib.rs  migration.rs  model.rs  paths.rs  project.rs  schema.rs  store.rs
crates/tenex-conversations/tests/: integration.rs
crates/tenex-daemon/: Cargo.toml
crates/tenex-daemon/src/: agent_config_publish_cache.rs  agent_config_update.rs  agent_definition_watcher.rs  agent_install.rs  agent_inventory.rs  agent_payload.rs  backend_config.rs  backend_event_publish.rs  backend_events_maintenance.rs  backend_events_tick.rs  backend_heartbeat_latch.rs  backend_profile.rs  backend_signer.rs  backend_status_driver.rs  backend_status_runtime.rs  backend_status_tick.rs  conversation_store_files.rs  daemon_control.rs  daemon_diagnostics.rs  daemon_foreground.rs  daemon_loop.rs  daemon_maintenance.rs  daemon_readiness.rs  daemon_shell.rs  daemon_signals.rs  daemon_status.rs  daemon_whitelist_store.rs  daemon_worker_runtime.rs  dispatch_queue.rs  filesystem_state.rs  foreground_wake.rs  inbound_dispatch.rs  inbound_envelope.rs  inbound_routing.rs  inbound_runtime.rs  inline_agent_payload.rs  intervention_driver.rs  lib.rs  llms_config.rs  nip44.rs  (+90 more)
crates/tenex-daemon/tests/: active_parent_injection.rs  concurrency_invariants.rs  whitelist_rehydration.rs
crates/tenex-embedder/: Cargo.toml
crates/tenex-embedder/src/: accounting.rs  accumulator.rs  backfill.rs  chunking.rs  config.rs  cursor.rs  identity.rs  lib.rs  lockfile.rs  main.rs  pacing.rs  paths.rs  processor.rs  relay.rs  republish.rs  scheduler.rs  scope.rs  state.rs  target.rs  transcript.rs  tuning.rs
crates/tenex-firewall/: Cargo.toml
crates/tenex-firewall/src/: lib.rs
crates/tenex-identity/: Cargo.toml
crates/tenex-identity/src/: cache.rs  client.rs  daemonize.rs  error.rs  fetch.rs  lib.rs  main.rs  model.rs  paths.rs  protocol.rs  resolve.rs  schema.rs  server.rs  tags.rs
crates/tenex-identity/tests/: cache.rs
crates/tenex-intervention/: Cargo.toml
crates/tenex-intervention/src/: config.rs  daemon.rs  delegation.rs  detector.rs  lib.rs  lockfile.rs  main.rs  model.rs  paths.rs  publish.rs  resolver.rs  state.rs
crates/tenex-llm-config/: Cargo.toml
crates/tenex-llm-config/src/: configs.rs  files.rs  key_health.rs  lib.rs  protocol.rs  resolver.rs  server.rs  types.rs
crates/tenex-llm-config/tests/: resolve_fixture_config.rs  resolve_real_config.rs
crates/tenex-mcp/: AGENTS.md  Cargo.toml
crates/tenex-mcp/src/: bridge.rs  config.rs  lib.rs  manifest.rs  runtime.rs  stdio.rs  stdio_reader.rs
crates/tenex-models-dev/: AGENTS.md  Cargo.toml
crates/tenex-models-dev/src/: lib.rs
crates/tenex-project/: AGENTS.md  Cargo.toml
crates/tenex-project/src/: error.rs  git.rs  id.rs  identity.rs  legacy.rs  lib.rs  migrations.rs  models.rs  paths.rs  project.rs  recipient.rs  signer.rs  teams.rs
crates/tenex-project/tests/: project.rs  unavailable_agents.rs
crates/tenex-protocol/: AGENTS.md  Cargo.toml
crates/tenex-protocol/src/: channel.rs  context.rs  event_filter.rs  intent.rs  lib.rs  refs.rs  runtime_control.rs  sink.rs  transcript.rs
crates/tenex-rag/: Cargo.toml
crates/tenex-rag/src/: config.rs  embed.rs  lib.rs  rag.rs  schema.rs  sqlite_store.rs  store.rs  (+1 more)
crates/tenex-scheduler/: Cargo.toml
crates/tenex-summarizer/: AGENTS.md  Cargo.toml
crates/tenex-system-prompt/: AGENTS.md  Cargo.toml
crates/tenex-telegram/: Cargo.toml
crates/tenex-telemetry/: Cargo.toml
tenex/: Cargo.toml
tenex/src/: main.rs
(+4448 files in other folders)
