[workspace]
members = ["crates/tenex-agent-storage", "crates/tenex-telemetry", "crates/tenex-agent", "crates/tenex-context", "crates/tenex-conversations", "crates/tenex-identity", "crates/tenex-intervention", "crates/tenex-llm-config", "crates/tenex-project", "crates/tenex-protocol", "crates/tenex-rag", "crates/tenex-scheduler", "crates/tenex-summarizer", "crates/tenex-supervision", "crates/tenex-system-prompt", "tenex", "whitelist"]
resolver = "2"
