[workspace]
members = ["crates/tenex-accounting", "crates/tenex-agent-registry", "crates/tenex-backend-keys", "crates/tenex-telemetry", "crates/tenex-agent", "crates/tenex-context", "crates/tenex-conversations", "crates/tenex-embedder", "crates/tenex-firewall", "crates/tenex-identity", "crates/tenex-intervention", "crates/tenex-llm-config", "crates/tenex-mcp", "crates/tenex-project", "crates/tenex-protocol", "crates/tenex-rag", "crates/tenex-scheduler", "crates/tenex-summarizer", "crates/tenex-supervision", "crates/tenex-system-prompt", "crates/tenex-telegram", "tenex", "crates/tenex-whitelist"]
resolver = "2"
