[package]
name = "tenex"
version = "0.1.0"
edition = "2021"
description = "TENEX project supervisor — discovers projects on Nostr and boots per-project runtimes."

[[bin]]
name = "tenex"
path = "src/main.rs"

[dependencies]
nostr = "0.44"
nostr-sdk = "0.44"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "process", "signal", "sync", "time"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tenex-telemetry = { path = "../crates/tenex-telemetry" }
libc = "0.2"
shell-words = "1"
console = "0.15"
inquire = "0.7"
indexmap = { version = "2", features = ["serde"] }
url = "2"
crossterm = "0.25"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"
sha2 = "0.10"
regex = "1"
tenex-whitelist = { path = "../whitelist" }
tenex-llm-config = { path = "../crates/tenex-llm-config" }
tenex-mcp = { path = "../crates/tenex-mcp" }
tenex-identity = { path = "../crates/tenex-identity" }
tenex-project = { path = "../crates/tenex-project" }
tenex-conversations = { path = "../crates/tenex-conversations" }
tenex-agent-registry = { path = "../crates/tenex-agent-registry" }
tenex-protocol = { path = "../crates/tenex-protocol" }
