[package]
name = "tenex"
version = "0.1.0"
edition = "2021"
description = "TENEX project supervisor — discovers projects on Nostr and boots per-project runtimes."

[[bin]]
name = "tenex"
path = "src/main.rs"

[dependencies]
nostr = "0.44"
nostr-sdk = "0.44"
notify = "6"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "process", "signal", "sync", "time"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
tenex-accounting = { path = "../crates/tenex-accounting" }
tenex-telemetry = { path = "../crates/tenex-telemetry" }
libc = "0.2"
console = "0.15"
inquire = { version = "0.7", features = ["editor"] }
indexmap = { version = "2", features = ["serde"] }
url = "2"
crossterm = "0.25"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs-next = "2"
sha2 = "0.10"
regex = "1"
tenex-llm-config = { path = "../crates/tenex-llm-config" }
tenex-mcp = { path = "../crates/tenex-mcp" }
tenex-models-dev = { path = "../crates/tenex-models-dev" }
tenex-identity = { path = "../crates/tenex-identity" }
tenex-project = { path = "../crates/tenex-project", features = ["nip46"] }
tenex-conversations = { path = "../crates/tenex-conversations" }
tenex-agent-registry = { path = "../crates/tenex-agent-registry" }
tenex-protocol = { path = "../crates/tenex-protocol", features = ["relay"] }
tenex-agent = { path = "../crates/tenex-agent" }
tenex-rag = { path = "../crates/tenex-rag" }
tenex-supervision = { path = "../crates/tenex-supervision" }
tenex-firewall = { path = "../crates/tenex-firewall" }
tenex-backend-keys = { path = "../crates/tenex-backend-keys" }
tenex-builtin-skills = { path = "../crates/tenex-builtin-skills" }
