[package]
name = "tenex-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tenex-agent"
path = "src/main.rs"

[dependencies]
tenex-project = { path = "../tenex-project" }
tenex-agent-registry = { path = "../tenex-agent-registry" }
tenex-conversations = { path = "../tenex-conversations" }
tenex-context = { path = "../tenex-context" }
tenex-protocol = { path = "../tenex-protocol", default-features = false }
tenex-llm-config = { path = "../tenex-llm-config" }
tenex-rag = { path = "../tenex-rag" }
tenex-supervision = { path = "../tenex-supervision" }
tenex-scheduler = { path = "../tenex-scheduler" }
tenex-system-prompt = { path = "../tenex-system-prompt" }
rig-core = "0.35"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
indexmap = "2"
nostr = "0.44"
glob = "0.3"
walkdir = "2"
regex = "1"
dirs-next = "2"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tenex-telemetry = { path = "../tenex-telemetry" }
tracing = "0.1"
tracing-opentelemetry = "0.32"

[dev-dependencies]
tempfile = "3"
