[package]
name = "tenex-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tenex-agent"
path = "src/main.rs"

[[bin]]
name = "tenex-agent-acp"
path = "src/acp_main.rs"

[dependencies]
tenex-accounting = { path = "../tenex-accounting" }
tenex-project = { path = "../tenex-project" }
tenex-agent-registry = { path = "../tenex-agent-registry" }
tenex-conversations = { path = "../tenex-conversations" }
tenex-context = { path = "../tenex-context" }
tenex-identity = { path = "../tenex-identity" }
tenex-protocol = { path = "../tenex-protocol", default-features = false }
tenex-llm-config = { path = "../tenex-llm-config" }
tenex-mcp = { path = "../tenex-mcp" }
tenex-rag = { path = "../tenex-rag" }
tenex-supervision = { path = "../tenex-supervision" }
tenex-scheduler = { path = "../tenex-scheduler" }
tenex-system-prompt = { path = "../tenex-system-prompt" }
tenex-telegram = { path = "../tenex-telegram" }
rig-core = { version = "0.35", features = ["reqwest-middleware"] }
reqwest-middleware = "0.5"
reqwest = "0.13"
base64 = "0.22"
http = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
indexmap = "2"
nostr = "0.44"
glob = "0.3"
walkdir = "2"
regex = "1"
dirs-next = "2"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tenex-telemetry = { path = "../tenex-telemetry" }
tracing = "0.1"
tracing-opentelemetry = "0.32"
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
