[package]
name = "tenex-conversations"
version = "0.1.0"
edition = "2021"
description = "Per-project SQLite conversation store: messages, tool messages, agent prompt history, context state, completions."

[lib]
name = "tenex_conversations"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
dirs-next = "2"

[dev-dependencies]
tempfile = "3"
