[package]
name = "tenex-daemon"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bech32 = "0.9"
hex = "0.4"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls-native-roots"] }
secp256k1 = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
url = "2.5"

[dev-dependencies]
tempfile = "3"
