[package]
name = "tenex-daemon"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
base64 = "0.22"
bech32 = "0.9"
chacha20 = "0.9"
hex = "0.4"
getrandom = "0.3"
hkdf = "0.12"
hmac = "0.12"
libc = "0.2"
opentelemetry = "0.28"
opentelemetry-otlp = { version = "0.28", features = ["http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.28", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls-native-roots"] }
secp256k1 = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "signal", "process"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tokio-util = "0.7"
tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
url = "2.5"
anyhow = "1"
dialoguer = "0.11"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[features]
# Enables tests that bind real TCP sockets (WebSocket mock relays, HTTP mock
# servers). Default `cargo test` skips them; full run:
#     cargo test --features integration
#     cargo nextest run --features integration --profile integration
integration = []
