[package]
name = "tenex-embedder"
version = "0.1.0"
edition = "2021"
description = "Daemon that embeds conversation transcripts into per-project RAG stores. Includes a backfill subcommand."

[[bin]]
name = "tenex-embedder"
path = "src/main.rs"

[dependencies]
tenex-accounting = { path = "../tenex-accounting" }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tenex-telemetry = { path = "../tenex-telemetry" }
tenex-identity = { path = "../tenex-identity" }
tenex-protocol = { path = "../tenex-protocol" }
tenex-rag = { path = "../tenex-rag" }
nostr = "0.44"
nostr-sdk = "0.44"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
async-trait = "0.1"
dirs-next = "2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
