[package]
name = "tenex-identity"
version = "0.1.0"
edition = "2021"
description = "Host-wide kind:0 identity resolution daemon with Unix socket API and SQLite cache."

[lib]
name = "tenex_identity"
path = "src/lib.rs"

[[bin]]
name = "tenex-identity"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "fs"] }
rusqlite = { version = "0.31", features = ["bundled"] }
nostr-sdk = "0.44"
nostr = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs-next = "2"
libc = "0.2"
nix = { version = "0.27", features = ["process", "fs"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
