[package]
name = "tenex-intervention"
version = "0.1.0"
edition = "2021"
description = "Daemon that monitors agent completions and publishes review-request events when users go silent."

[[bin]]
name = "tenex-intervention"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nostr-sdk = "0.44"
dirs-next = "2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
