[package]
name = "tenex-llm-config"
version = "0.1.0"
edition = "2021"
description = "LLM configuration resolver: loads providers.json + llms.json, resolves aliases, and tracks key health."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"
