[package]
name = "tenex-project"
version = "0.1.0"
edition = "2021"
description = "File-backed view of per-project TENEX state: agents, membership, and project metadata."

[lib]
name = "tenex_project"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
nostr = "0.44"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
