[package]
name = "tenex-protocol"
version = "0.1.0"
edition = "2021"
description = "TENEX agent communication protocol — transport-agnostic intents and channel adapters."

[features]
default = []
relay = ["dep:nostr-sdk"]

[dependencies]
nostr = "0.44"
nostr-sdk = { version = "0.44", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
tenex-ids = { path = "../tenex-ids" }
tokio = { version = "1", features = ["io-std", "io-util", "sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
