[package]
name = "tenex-rag"
version = "0.1.0"
edition = "2021"
description = "RAG (retrieval-augmented generation) storage and search for TENEX agents."

[dependencies]
tenex-llm-config = { path = "../tenex-llm-config" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
tracing = "0.1"
dirs-next = "2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
