[package]
name = "tenex-scheduler"
version = "0.1.0"
edition = "2021"
description = "Daemon that fires scheduled tasks as kind:1 Nostr events across all TENEX projects on the host."

[[bin]]
name = "tenex-scheduler"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nostr-sdk = "0.44"
notify = "6"
croner = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
